k8s-eks/deploy-api.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: web
  labels:
    name: web
    app: demo
spec:
  replicas: 1
  selector:
    matchLabels:
      name: web
  template:
    metadata:
      labels:
        name: web
    spec:
      containers:
        - name: web
          image: berdevops/python-api
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 5000
              name: http
              protocol: TCP
          livenessProbe:
            httpGet:
              path: /health
              port: http
            initialDelaySeconds: 15
            periodSeconds: 20
          readinessProbe:
            httpGet:
              path: /health
              port: http
            initialDelaySeconds: 5
            periodSeconds: 5
