k8s-eks/svc-db.yaml
apiVersion: v1
kind: Service
metadata:
  name: redis
  labels:
    name: redis
    app: demo
spec:
  selector:
    name: redis 
  type: ClusterIP
  ports:
   - port: 6379
     targetPort: 6379
     protocol: TCP
